--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <!-- D3 JavaScript -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <!-- JavaScript file -->
-  <script type="text/javascript" src="Leaflet1/js/config.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-1/js/conf.js"></script>
   <!-- <script type="text/javascript" src="Leaflet1/js/logic.js"></script> -->
-  <script type="text/javascript" src="Leaflet2/js/logic2.js"></script>
+  <script type="text/javascript" src="Leaflet-Part-2/logic1.js"></script>
 </body>
 
 </html>
